# c_amx

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  main.c
src/: amx_asm.S  amx_asm.h  amx_matmul.c  amx_matmul.h  amx_util.c  amx_util.h  main.c
tests/: test_ldst.c  test_matmul.c
